sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i=1
  do {if (i==0)
      {i=1}
  
    
      if (!isSmaller(i-1,i+1)) {
        swap(i-1,i+1)
         
        i-=1       
       }
  		else{i+=1}
       
    
  } while (i<getValueCount()-1))
  
}
